Memisahkan Code ke masing masing file .php

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -166,6 +166,27 @@ main{
 .t_content table tr td:nth-child(1){
     font-weight: 800;
 }
+.tgraph > table{
+    width: 96%;
+    margin-inline-start: 2%;
+    border-collapse: collapse;
+    margin-block-end: 2%;
+    margin-block-start: 20px;
+    font-size: 0.8rem;
+}
+.tgraph > table > thead > tr > th{
+    padding: 8px;
+    background: var(--blue);
+    color: white;
+    border: 1px solid var(--blue);
+}
+.tgraph > table > tbody > tr > td{
+    border: 1px solid var(--line);
+}
+.tgraph > table >tbody>tr>td:nth-child(1){
+    text-align: center;
+    font-weight: 600;
+}
 footer{
     background: var(--dark2);
     padding: 20px;
