--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -55,8 +55,8 @@ h4{
     justify-content: space-between;
 }
 .container a{
-    flex: 1;
-    max-width: 400px;
+    width: 300px;
+    max-width: 300px;
     border: 1px solid var(--line);
     box-shadow: 0 0 10px 0 var(--shadow);
     border-radius: 12px;
@@ -242,7 +242,7 @@ footer{
 .footer_cont{
     text-align: center;
 }
-.input_cont, .input_cont_prob{
+.input_cont, .input_cont_prob, .input_cont_bbm{
     width: 100%;
     height: 100%;
     position: fixed;
@@ -250,6 +250,17 @@ footer{
     background: rgba(0, 0, 0, 0.589);
     display: none;
     align-items: center;
+}
+.input_cont_bbm{
+    background: none;
+    background-image: url("../illus/Wave.svg");
+    display: flex;
+}
+.form_bbm{
+    border: 1px solid var(--line);
+    box-shadow: 0 0 10px 0 var(--shadow);
+    height: 98%;
+    
 }
 .input_cont_prob .form_problem{
     width: 60%;
@@ -455,4 +466,31 @@ textarea{
 }
 .loss_detail table tbody tr:hover{
     background: rgba(172, 172, 172, 0.123);
+}
+.t_bbm >div{
+    width: 100%;
+    height: 195px;
+    overflow: auto;
+}
+.t_bbm >div>table{
+    width: 100%;
+    border-collapse: collapse;
+    border: 1px solid var(--line);
+    text-align: center;
+    font-size: 0.8rem;
+    border-radius: 10px;
+}
+.t_bbm >div>table>thead>tr{
+    background: var(--blue);
+    color: white;
+    border: 1px solid var(--line);
+}
+.t_bbm >div>table>tbody>tr>td{
+    padding: 15px !important;
+}
+.t_bbm >div>table>tbody>tr:nth-child(even){
+    background: rgba(228, 228, 228, 0.304);
+}
+.t_bbm >div>table>tbody>tr:hover{
+    background: var(--shadow);
 }
