--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -556,3 +556,21 @@ textarea{
     height: 100%;
     flex: 1
 }
+.headlistlosstime{
+    display: flex !important;
+    padding: 20px 50px;
+    align-items: center;
+    text-align: left;
+    margin-block-end: 30px;
+}
+.headlistlosstime >div>h1{
+    color: var(--blue);
+}
+.choose_date{
+    width: 100%;
+    margin: 0;
+    margin-inline-start: 30px;
+}
+.tablelist > table>thead>tr>th{
+    padding: 17px;
+}
